--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "bundle/ack"]
 	path = bundle/ack
 	url = git://github.com/mileszs/ack.vim.git
+[submodule "vim-markdown"]
+	path = vim-markdown
+	url = git://github.com/tpope/vim-markdown.git
