--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "bundle/jedi-vim"]
 	path = bundle/jedi-vim
 	url = https://github.com/davidhalter/jedi-vim.git
+[submodule "bundle/ensime-vim"]
+	path = bundle/ensime-vim
+	url = https://github.com/ensime/ensime-vim.git
