--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "bundle/ensime-vim"]
 	path = bundle/ensime-vim
 	url = https://github.com/ensime/ensime-vim.git
+[submodule "bundle/lexima-vim"]
+	path = bundle/lexima-vim
+	url = https://github.com/cohama/lexima.vim.git
