--- a/.gitmodules
+++ b/.gitmodules
@@ -52,9 +52,6 @@
 [submodule "bundle/ctrlp"]
 	path = bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
-[submodule "bundle/rust-vim"]
-	path = bundle/rust-vim
-	url = https://github.com/wting/rust.vim.git
 [submodule "bundle/vim-scala"]
 	path = bundle/vim-scala
 	url = https://github.com/derekwyatt/vim-scala.git
@@ -67,3 +64,6 @@
 [submodule "bundle/vim-youcompleteme"]
 	path = bundle/vim-youcompleteme
 	url = https://github.com/valloric/youcompleteme
+[submodule "bundle/vim-rust"]
+	path = bundle/vim-rust
+	url = https://github.com/rust-lang/rust.vim
