--- a/.gitmodules
+++ b/.gitmodules
@@ -18,7 +18,7 @@
 	url = https://github.com/tpope/vim-repeat.git
 [submodule "bundle/supertab"]
 	path = bundle/supertab
-	url = https://github.com/tsaleh/vim-supertab.git
+	url = https://github.com/ervandew/supertab.git
 [submodule "bundle/surround"]
 	path = bundle/surround
 	url = https://github.com/tpope/vim-surround.git
