--- a/coc-settings.json
+++ b/coc-settings.json
@@ -15,7 +15,7 @@
     "bash": {
       "command": "bash-language-server",
       "args": ["start"],
-      "filetypes": ["sh", "bash"],
+      "filetypes": ["sh"],
       "ignoredRootPaths": ["~"]
     },
     "pyright": {
